# www-site

./: .gitignore  .gitmodules  .tool-versions  .travis.yml  Dockerfile  Makefile  Pipfile  README.md  docker-compose.yml  fabfile.py  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt
content/: test.rst
content/articles/: different-git-configuration-per-directory.md  easy-firefox-profile-switching-on-ubuntu.md  emacs-terminal-support.md  personal-documentation-website.md  restore-internet-radio-denon-ceol-n8.md  watt-is-going-on-in-my-home.md
content/blog/: docker-machine-on-linode.md  docker-machine-on-linode.rst  establishing-curiousbits.md  hello_world.md  hello_world.rst  how-can-i-make-a-copy-of-a-printer-in-windows-10.md  how-can-i-make-a-copy-of-a-printer-in-windows-10.rst  how-to-make-the-XYL-8805-G-Barcode-Scanner-work-correctly-on-mac-os.md  how-to-make-the-XYL-8805-G-Barcode-Scanner-work-correctly-on-mac-os.rst  how_to_install_raspbian_jessie_on_an_old_raspberry_pi.md  how_to_install_raspbian_jessie_on_an_old_raspberry_pi.rst  json-api-to-csv-file.md  json-api-to-csv-file.rst  meetups-in-eindhoven.md  meetups-in-eindhoven.rst  new-job.md  research-hosting-companies-and-https.md  research-hosting-companies-and-https.rst  sff-workstation-build-notes.md
content/pages/: about.md
content/static/: .htaccess
scripts/: deploy_ftp.sh  develop_server.sh
theme/templates/: base.html
theme/templates/fragments/: goatcounter.html
