[tool.poetry]
name = "www-site"
version = "0.1.0"
description = ""
authors = ["Therry van Neerven <therry.van.neerven@curiousbits.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
Markdown = "*"
pelican = "*"
markdown = "*"


[tool.poetry.group.dev.dependencies]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
